--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <span class="collapsible-indicator">[+]</span>
                             </summary>
                             <div id="action-checkbox-group" class="action-checkbox-group">
-                                <details class="collapsible-fieldset">
+                                <details class="collapsible-fieldset group-shortcuts">
                                     <summary class="collapsible-summary-inner">
                                         <span>Gerenciamento de Atalhos</span>
                                         <span class="collapsible-indicator">[+]</span>
@@ -51,7 +51,7 @@
                                         <div class="checkbox-item"><input type="checkbox" id="action-ativar" name="action" value="ativar"><label for="action-ativar">Restaurar Atalhos</label></div>
                                     </div>
                                 </details>
-                                <details class="collapsible-fieldset">
+                                <details class="collapsible-fieldset group-system">
                                     <summary class="collapsible-summary-inner">
                                         <span>Gerenciamento do Sistema</span>
                                         <span class="collapsible-indicator">[+]</span>
@@ -63,7 +63,7 @@
                                         <div class="checkbox-item"><input type="checkbox" id="action-atualizar_sistema" name="action" value="atualizar_sistema"><label for="action-atualizar_sistema">Atualizar Sistema</label></div>
                                     </div>
                                 </details>
-                                <details class="collapsible-fieldset">
+                                <details class="collapsible-fieldset group-interface">
                                     <summary class="collapsible-summary-inner">
                                         <span>Controle da Interface</span>
                                         <span class="collapsible-indicator">[+]</span>
@@ -75,7 +75,7 @@
                                         <div class="checkbox-item"><input type="checkbox" id="action-desbloquear_barra_tarefas" name="action" value="desbloquear_barra_tarefas"><label for="action-desbloquear_barra_tarefas">Desbloquear Barra de Tarefas</label></div>
                                     </div>
                                 </details>
-                                <details class="collapsible-fieldset">
+                                <details class="collapsible-fieldset group-browser">
                                     <summary class="collapsible-summary-inner">
                                         <span>Configurações do Navegador</span>
                                         <span class="collapsible-indicator">[+]</span>
@@ -85,7 +85,7 @@
                                         <div class="checkbox-item"><input type="checkbox" id="action-definir_chrome_padrao" name="action" value="definir_chrome_padrao"><label for="action-definir_chrome_padrao">Definir Chrome como Padrão</label></div>
                                     </div>
                                 </details>
-                                <details class="collapsible-fieldset">
+                                <details class="collapsible-fieldset group-peripherals">
                                     <summary class="collapsible-summary-inner">
                                         <span>Controle de Periféricos</span>
                                         <span class="collapsible-indicator">[+]</span>
@@ -97,7 +97,7 @@
                                         <div class="checkbox-item"><input type="checkbox" id="action-ativar_botao_direito" name="action" value="ativar_botao_direito"><label for="action-ativar_botao_direito">Ativar Botão Direito</label></div>
                                     </div>
                                 </details>
-                                <details class="collapsible-fieldset">
+                                <details class="collapsible-fieldset group-remote">
                                     <summary class="collapsible-summary-inner">
                                         <span>Ações Remotas</span>
                                         <span class="collapsible-indicator">[+]</span>
