--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="control-inputs-wrapper">
                         <div class="input-group">
                             <label for="password">Senha:</label>
-                            <input type="password" id="password" placeholder="Digite a senha SSH">
+                            <input type="password" id="password" placeholder="Digite a senha SSH" value="qwe123">
                         </div>
 
                         <details class="input-group collapsible-section">
@@ -142,10 +142,6 @@
                             <div class="ip-select-all">
                                 <input type="checkbox" id="select-all">
                                 <label for="select-all">Selecionar Todos</label>
-                            </div>
-                            <div class="auto-refresh-toggle">
-                                <input type="checkbox" id="auto-refresh-toggle" checked>
-                                <label for="auto-refresh-toggle">Atualização Automática</label>
                             </div>
                         </div>
                         <div id="ip-list">
