--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="control-inputs-wrapper">
                         <div class="input-group">
                             <label for="password">Senha:</label>
-                            <input type="password" id="password" placeholder="Digite a senha SSH" value="qwe123">
+                            <input type="password" id="password" placeholder="Senha do usuário com sudo (ex: aluno)" value="qwe123">
                         </div>
 
                         <details class="input-group collapsible-section">
@@ -186,6 +186,10 @@
                             <div class="ip-select-all">
                                 <input type="checkbox" id="select-all">
                                 <label for="select-all">Selecionar Todos</label>
+                            </div>
+                            <div class="ip-search">
+                                <label for="ip-search-input" class="sr-only">Pesquisar IP</label>
+                                <input type="search" id="ip-search-input" placeholder="🔎 Pesquisar IP...">
                             </div>
                         </div>
                         <div id="ip-list">
