--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                             </div>
                             <div class="ip-search">
                                 <label for="ip-search-input" class="sr-only">Pesquisar IP</label>
-                                <input type="search" id="ip-search-input" placeholder="🔎 Pesquisar IP...">
+                                <input type="search" id="ip-search-input" placeholder="🔎 Pesquisar...">
                             </div>
                         </div>
                         <div id="ip-list">
