--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="control-inputs-wrapper">
                         <div class="input-group">
                             <label for="password">Senha:</label>
-                            <input type="password" id="password" placeholder="Senha do usuário com sudo (ex: aluno)">
+                            <input type="password" id="password" placeholder="Senha do usuário com sudo (ex: aluno)" value="qwe123">
                         </div>
 
                         <details class="input-group collapsible-section">
