--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
                                         <div class="checkbox-item"><input type="checkbox" id="action-ativar_barra_tarefas" name="action" value="ativar_barra_tarefas"><label for="action-ativar_barra_tarefas">Restaurar Barra de Tarefas</label></div>
                                         <div class="checkbox-item"><input type="checkbox" id="action-bloquear_barra_tarefas" name="action" value="bloquear_barra_tarefas"><label for="action-bloquear_barra_tarefas">Bloquear Barra de Tarefas</label></div>
                                         <div class="checkbox-item"><input type="checkbox" id="action-desbloquear_barra_tarefas" name="action" value="desbloquear_barra_tarefas"><label for="action-desbloquear_barra_tarefas">Desbloquear Barra de Tarefas</label></div>
+                                        <div class="checkbox-item"><input type="checkbox" id="action-disable_sleep_button" name="action" value="disable_sleep_button"><label for="action-disable_sleep_button">Desativar Suspensão (Sleep)</label></div>
+                                        <div class="checkbox-item"><input type="checkbox" id="action-enable_sleep_button" name="action" value="enable_sleep_button"><label for="action-enable_sleep_button">Ativar Suspensão (Sleep)</label></div>
                                     </div>
                                 </details>
                                 <details class="collapsible-fieldset group-browser">
