--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                                 <span>Ações</span>
                                 <span class="collapsible-indicator">[+]</span>
                             </summary>
+                            <div class="action-search-wrapper">
+                                <label for="action-search-input" class="sr-only">Pesquisar Ação</label>
+                                <input type="search" id="action-search-input" placeholder="🔎 Pesquisar ações...">
+                            </div>
+
                             <div id="action-checkbox-group" class="action-checkbox-group">
                                 <details class="collapsible-fieldset group-shortcuts">
                                     <summary class="collapsible-summary-inner">
@@ -61,6 +66,8 @@
                                         <div class="checkbox-item"><input type="checkbox" id="action-ocultar_sistema" name="action" value="ocultar_sistema"><label for="action-ocultar_sistema">Ocultar Ícones do Sistema</label></div>
                                         <div class="checkbox-item"><input type="checkbox" id="action-limpar_imagens" name="action" value="limpar_imagens"><label for="action-limpar_imagens">Limpar Pasta de Imagens</label></div>
                                         <div class="checkbox-item"><input type="checkbox" id="action-atualizar_sistema" name="action" value="atualizar_sistema"><label for="action-atualizar_sistema">Atualizar Sistema</label></div>
+                                        <div class="checkbox-item"><input type="checkbox" id="action-ativar_deep_lock" name="action" value="ativar_deep_lock"><label for="action-ativar_deep_lock">Ativar Deep Lock (Freeze)</label></div>
+                                        <div class="checkbox-item"><input type="checkbox" id="action-desativar_deep_lock" name="action" value="desativar_deep_lock"><label for="action-desativar_deep_lock">Desativar Deep Lock</label></div>
                                         <div class="checkbox-item"><input type="checkbox" id="action-remover_nemo" name="action" value="remover_nemo"><label for="action-remover_nemo">Remover Nemo (Gerenciador de Arquivos)</label></div>
                                         <div class="checkbox-item"><input type="checkbox" id="action-instalar_nemo" name="action" value="instalar_nemo"><label for="action-instalar_nemo">Instalar Nemo e Cinnamon</label></div>
                                     </div>
